style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap'); 

* {
    box-sizing: border-box;
    margin: 0; 
    padding: 0; 
    font-family: 'Open Sans', sans-serif; 
}

header {  
    background: rgb(177, 177, 179);
    height: 75px;
}

.top_navbar .logo, .logo {
    width: 250px;
    font-size: 30px;
    font-weight: 700;
    padding: 10px 25px;
    color: red;
    letter-spacing: 2px;
    inline-size: 90px; 
    background: #f18080;
    border-radius: 40px;
}

.nav-bar li {
    margin-top: -20px;
    float: right;   
}

.nav-bar ul {
    margin-top: -25px;    
}

.nav-bar ul li {
    display: inline-block;
    line-height: 50px;
    margin: 0 10px;
    font-size: 25px;
}

.nav-bar a {
    color: red;
    text-decoration: none;
    background: #8d939c;
    padding: 10px;
    border-radius: 50px;
    margin: 10px;
}

.nav-bar a:hover {
    background-color: black;
}

.hero {
    margin-top: 90px;
    height: 700px;
    background: url(images/pexels-祝-鹤槐-716281.jpg) no-repeat center / cover;
    opacity: 60%;
    border-radius: 20px;
}

.text {
    color: #0c0000;
    background: #706896d5;
    width: 80%;
    height: 260px;
    font-weight: 900;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    margin-top: 200px;
    border-radius: 25px;  
}

.text h1 {
    margin-top: -50px;
    margin-bottom: 50px;
    background: #56c3e4;
    border-radius: 32px;
}

.features, #container1, #container2, #container3 {
    background: rgb(140, 140, 184);  
    border-radius: 50px;
}

#txt1, #txt2, #txt3 {
    font-size: 20px;
    margin-top: -60px;
}

body {
    background: rgb(182, 180, 180);        
}

h1 {
    font-size: 3rem; 
    font-family: 'Poppins';
    padding-bottom: 20px; 
}

p {
    line-height: 40px;
    font-size: 20px;    
}

button {
    padding: 15px 60px;
    margin-top: 30px; 
    margin-bottom: 40px;
    border-radius: 5rem;
    border: 0; 
    cursor: pointer; 
    color: #674baf;
    font-size: 1em;
    font-weight: 600;
    transition: 0.3s all ease;
}

button:hover {
    color: #fff; 
    background: red; 
}

/* Footer */
footer {
    text-align: center;
    background-color: rgb(103, 107, 107); 
    height: 100px;
}

.fab {
    border: 2px solid #fff; 
    padding: 10px 10px; 
    border-radius: 50%; 
    margin-left: 20px; 
    color: #fff; 
    transition: 0.3s all ease;  
    margin-bottom: 10px;
    margin-top: 10px;
}

.fa-facebook-f {
    padding: 10px 13px;   
}

.fab:hover {
    color: red;
    border-color: #fff;
    background-color: #fff;
    cursor: pointer; 
}

